Spruce up Index and Forms, Add navbar, Add friendly-format created@ to index

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,9 @@
  *= require_tree .
  *= require_self
  */
+body {
+  font-family: monaco,Consolas,"Lucida Console",monospace
+  background-image: url(ep_naturalblack.png);
+}
+
+
