Add japanese phone numberconversion

--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -5,7 +5,7 @@
     <div class="well">
       <h5 class="text-left"><i>Name:</i></h5> <p class="text-right"><a href= "/contacts/<%= contact.id %>"><%= contact.full_name %></a></p>
       <h5 class="text-left"><i>Email:</i></h5> <p class="text-right"><%= contact.email %></p>
-      <h5 class="text-left"><i>Phone Number:</i></h5> <p class="text-right"><%= contact.phone_number %></p>
+      <h5 class="text-left"><i>Phone Number:</i></h5> <p class="text-right"><%= contact.japan_phone_conv %></p>
     </div>
   </div>
 <% end %>
