--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -2,7 +2,7 @@
   <p>First Name: <%= @contact.first_name %></p>
   <p>Last Name: <%= @contact.last_name %></p>
   <p>Email: <%= @contact.email %></p>
-  <p>Phone Number: <%= @contact.phone_number %></p>
+  <p>Phone Number: <%= @contact.japan_phone_conv%></p>
   <div>
     <span class="pull-right"><h6>Created At: <%= @contact.friendly_created_at %></h6></span>
     <br>
